Add missing licence headers and excludes for rat
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1676295 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/resourceaccesssecurity/it/pom.xml
+++ b/bundles/resourceaccesssecurity/it/pom.xml
@@ -119,6 +119,16 @@
                     </instructions>
                 </configuration>
             </plugin>
+           <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>sling/**</exclude>
+                        <exclude>derby.log</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
