--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.osgi-mock</artifactId>
-            <version>1.2.0</version>
+            <version>1.2.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -171,12 +171,6 @@
         </dependency>
     
         <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.scr.annotations</artifactId>
-            <scope>compile</scope>
-        </dependency>
-    
-        <dependency>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>servlet-api</artifactId>
             <version>3.0.20100224</version>
@@ -236,14 +230,6 @@
           <plugin>
             <groupId>org.apache.felix</groupId>
             <artifactId>maven-scr-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>generate-scr-scrdescriptor</id>
-                <goals>
-                  <goal>scr</goal>
-                </goals>
-              </execution>
-            </executions>
           </plugin>
     
         </plugins>
