Add excludes for rat
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1676330 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/integration-tests/pom.xml
+++ b/launchpad/integration-tests/pom.xml
@@ -57,6 +57,20 @@
     <url>http://svn.apache.org/viewvc/sling/trunk/launchpad/integration-tests</url>
   </scm>
 
+  <build>
+      <plugins>
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>src/main/resources/**</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>        
+      </plugins>
+  </build>
+  
   <profiles>
     <profile>
       <!--
