--- a/bundles/extensions/validation/examples/pom.xml
+++ b/bundles/extensions/validation/examples/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling</artifactId>
-        <version>23-SNAPSHOT</version>
+        <version>22</version>
         <relativePath>../../../../parent/pom.xml</relativePath>
     </parent>
 
